* FEA#7917 Add configuration to ignore beneficiary shares at claim closing
* BUG#7832  Add technical dependency on field loss kind.

Version 1.14 - 2017-11-09
* FEA#7378 Add initial std start date in rule engine
* FEA#7279 Handle beneficiary extra data on beneficiary
* FEA#6385 Allow to define covered party as default beneficiary in claim

Version 1.12 - 2017-04-28
* FEA#0000 Manage manual beneficiary list
* FEA#0000 Set end date to return_to_work_date - 1 when return_to_work_date is set
* FEA#0000 Auto set initial short term disability date when converting to long term
* FEA#0000 Verify delay between first std and relapse

Version 1.10 - 2016-11-02
* FEA#0000 Handle claim relapse

Version 1.8 - 2016-07-06
* FEA#0000 Rework module

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation